--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
